--- a/numpy/Amit_Numpy.ipynb
+++ b/numpy/Amit_Numpy.ipynb
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "continental-behavior",
+   "id": "solved-pierre",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "understanding-barrier",
+   "id": "spanish-discipline",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interracial-conversation",
+   "id": "working-relation",
    "metadata": {},
    "source": [
     "### Sorting"
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "detailed-petroleum",
+   "id": "accepted-jamaica",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "selective-closure",
+   "id": "cellular-confidentiality",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "virtual-color",
+   "id": "massive-conversion",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "secure-delaware",
+   "id": "patient-array",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "temporal-washington",
+   "id": "guided-basics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "progressive-company",
+   "id": "british-terrain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collect-secret",
+   "id": "accredited-meeting",
    "metadata": {},
    "source": [
     "### stacking arrays"
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "several-samuel",
+   "id": "international-object",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "shaped-celebrity",
+   "id": "flying-riverside",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "several-flood",
+   "id": "superior-purse",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "still-beach",
+   "id": "generous-third",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "buried-inspiration",
+   "id": "considered-horizon",
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "posted-numbers",
+   "id": "nuclear-insight",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "proud-eight",
+   "id": "shared-landscape",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "palestinian-ottawa",
+   "id": "physical-confidentiality",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "dried-discipline",
+   "id": "federal-dating",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abroad-titanium",
+   "id": "otherwise-belle",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conventional-performer",
+   "id": "limiting-integration",
    "metadata": {},
    "source": [
     "### slicing "
@@ -1145,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "contrary-radio",
+   "id": "handy-designation",
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ruled-locator",
+   "id": "complex-flower",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "unexpected-mambo",
+   "id": "empty-peripheral",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "major-polish",
+   "id": "statewide-keyboard",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legitimate-carry",
+   "id": "organized-tobago",
    "metadata": {},
    "source": [
     "### unique"
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "looking-punishment",
+   "id": "common-mouth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "overhead-parts",
+   "id": "intelligent-offset",
    "metadata": {},
    "source": [
     "### np.flip / reverse an array"
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surgical-marijuana",
+   "id": "given-preparation",
    "metadata": {},
    "source": [
     "### Flatten an array"
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mineral-palace",
+   "id": "lovely-authorization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "official-presence",
+   "id": "exclusive-drive",
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "surface-click",
+   "id": "unnecessary-pattern",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "manufactured-vocabulary",
+   "id": "victorian-moscow",
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "expressed-separate",
+   "id": "normal-piano",
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "massive-ability",
+   "id": "hearing-result",
    "metadata": {},
    "source": [
     "### Important Functions"
@@ -1506,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "defensive-scott",
+   "id": "broken-convention",
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1529,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "fitted-middle",
+   "id": "lesser-lover",
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "tracked-shoulder",
+   "id": "atmospheric-tunisia",
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "architectural-wells",
+   "id": "violent-bouquet",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "advisory-financing",
+   "id": "liquid-frontier",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "complimentary-anatomy",
+   "id": "realistic-brazilian",
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spatial-squad",
+   "id": "wireless-kuwait",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1688,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "balanced-ceramic",
+   "id": "assured-equality",
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "fluid-pennsylvania",
+   "id": "rational-ground",
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governing-allowance",
+   "id": "removed-pendant",
    "metadata": {},
    "source": [
     "### reshape / resize"
@@ -1828,53 +1828,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Array Creation\n",
-    "\n",
-    "#     arange, array, copy, empty, empty_like, eye, fromfile, fromfunction, identity, \n",
-    "# linspace, logspace, mgrid, ogrid, ones, ones_like, r_, zeros, zeros_like\n",
-    "# Conversions\n",
-    "\n",
-    "#     ndarray.astype, atleast_1d, atleast_2d, atleast_3d, mat\n",
-    "# Manipulations\n",
-    "\n",
-    "#     array_split, column_stack, concatenate, diagonal, dsplit, dstack, hsplit, hstack, ndarray.item, \n",
-    "# newaxis, ravel, repeat, reshape, resize, squeeze, swapaxes, take, transpose, vsplit, vstack\n",
-    "\n",
-    "# Questions\n",
-    "\n",
-    "#     all, any, nonzero, where\n",
-    "# Ordering\n",
-    "\n",
-    "#     argmax, argmin, argsort, max, min, ptp, searchsorted, sort\n",
-    "# Operations\n",
-    "\n",
-    "#     choose, compress, cumprod, cumsum, inner, ndarray.fill, imag, prod, put, putmask, real, sum\n",
-    "    \n",
-    "# Basic Statistics\n",
-    "\n",
-    "#     cov, mean, std, var\n",
-    "# Basic Linear Algebra\n",
-    "\n",
-    "#     cross, dot, outer, linalg.svd, vdot\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "million-personality",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.ix_()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "id": "second-locator",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Remaining numppy functions for exploration\n",
+    "# fromfile, fromfunction, identity, linspace, logspace, mgrid, ogrid, ones_like, zeros_like\n",
+    "# ndarray.astype, atleast_1d, atleast_2d, atleast_3d, mat\n",
+    "# array_split, diagonal, dsplit, dstack, ndarray.item, \n",
+    "# repeat, squeeze, swapaxes, take, \n",
+    "# nonzero, where, ptp,\n",
+    "# choose, compress, cumprod, cumsum, inner, ndarray.fill, imag, prod, put, putmask, real,\n",
+    "# np.ix_()\n",
     "# numpy ufunc"
    ]
   },
