--- a/numpy/Amit_Numpy.ipynb
+++ b/numpy/Amit_Numpy.ipynb
@@ -1649,6 +1649,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "greatest-trust",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 7, 8],\n",
+       "       [3, 4, 9],\n",
+       "       [2, 5, 6]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array([[8,1,7], [4,3,9], [5,2,6]])\n",
+    "np.apply_along_axis(sorted, axis=1, arr=arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 94,
    "id": "joint-richards",
    "metadata": {},
@@ -1755,16 +1779,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "unauthorized-wealth",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Indexing, Indexing (reference), newaxis, ndenumerate, indices\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "removed-pendant",
    "metadata": {},
@@ -1822,6 +1836,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "massive-anime",
+   "metadata": {},
+   "source": [
+    "### np.where : IF-THEN-ELSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "chemical-agreement",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4, 50, 60, 70, 80, 90])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.arange(10)\n",
+    "print(arr)\n",
+    "np.where(arr < 5, arr, 10*arr) # IF-THEN-ELSE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "advised-quilt",
+   "metadata": {},
+   "source": [
+    "### astype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "lyric-flexibility",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([1, 2, 2.5])\n",
+    "x.astype(int)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fallen-second",
@@ -1836,7 +1907,8 @@
     "# nonzero, where, ptp,\n",
     "# choose, compress, cumprod, cumsum, inner, ndarray.fill, imag, prod, put, putmask, real,\n",
     "# np.ix_()\n",
-    "# numpy ufunc"
+    "# numpy ufunc\n",
+    "# Indexing, Indexing (reference), newaxis, ndenumerate, indices"
    ]
   },
   {
