--- a/numpy/Amit_Numpy.ipynb
+++ b/numpy/Amit_Numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "authorized-binding",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "determined-geology",
    "metadata": {},
    "outputs": [],
@@ -242,6 +242,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "guided-istanbul",
+   "metadata": {},
+   "source": [
+    "### Dropping a axes of size 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "retired-editor",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial shape (1, 5)\n",
+      "size after squeeze (5,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(5)\n",
+    "temp = a[np.newaxis,:]\n",
+    "print(\"Initial shape\",temp.shape)\n",
+    "print(\"size after squeeze\",np.squeeze(temp,axis=0).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "functioning-export",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "sexual-stream",
    "metadata": {},
    "source": [
@@ -324,7 +362,7 @@
     }
    ],
    "source": [
-    "np.empty(shape=(2,3,4)) #This isfaster than np.zeros"
+    "np.empty(shape=(2,3,4)) #This is faster than np.zeros"
    ]
   },
   {
@@ -1490,21 +1528,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "indonesian-maintenance",
-   "metadata": {
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "# all, any, apply_along_axis, argmax, argmin, argsort, average, bincount, ceil, clip, conj, \n",
-    "# corrcoef, cov, cross, cumprod, cumsum, diff, dot, floor, inner, invert, lexsort, max, \n",
-    "# maximum, mean, median, min, minimum, nonzero, outer, prod, re, round, sort, std, sum, trace, \n",
-    "# transpose, var, vdot, vectorize, where"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 68,
    "id": "broken-convention",
    "metadata": {},
@@ -1780,6 +1803,139 @@
   },
   {
    "cell_type": "markdown",
+   "id": "musical-rotation",
+   "metadata": {},
+   "source": [
+    "### Important functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "covered-patent",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# maximum - equivalent to np.where(x1 >= x2, x1, x2)\n",
+    "# minimum - equivalent to np.where(x1 <= x2, x1, x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "refined-seating",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# corrcoef - Pearson correlation coefficient\n",
+    "# cov - covariance\n",
+    "# inner/cross - inner/cross product\n",
+    "# np.dot / @ - dot product\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "premium-treasurer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 6]\n",
+      "\n",
+      "[  1   2   6  24 120 720]\n",
+      "\n",
+      "[[ 1  2  3]\n",
+      " [ 4 10 18]]\n",
+      "\n",
+      "[[  1   2   6]\n",
+      " [  4  20 120]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cumprod, cumsum, diff\n",
+    "a = np.array([1,2,3])\n",
+    "print(np.cumprod(a))\n",
+    "print()\n",
+    "\n",
+    "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(np.cumprod(a))\n",
+    "print()\n",
+    "print(np.cumprod(a, axis=0))\n",
+    "print()\n",
+    "print(np.cumprod(a,axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "first-stone",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False  True]\n",
+      "[False  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([True,False])\n",
+    "print(np.invert(arr))\n",
+    "print(~arr) # short hand notation for invert"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "concrete-eligibility",
+   "metadata": {},
+   "source": [
+    "### vectorize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "plain-bookmark",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 1, 2])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def myfunc(a, b):\n",
+    "    if a > b:\n",
+    "        return a - b\n",
+    "    else:\n",
+    "        return a + b\n",
+    "    \n",
+    "vfunc = np.vectorize(myfunc)\n",
+    "vfunc([1, 2, 3, 4], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bronze-essence",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "removed-pendant",
    "metadata": {},
    "source": [
@@ -1900,15 +2056,12 @@
    "outputs": [],
    "source": [
     "# Remaining numppy functions for exploration\n",
-    "# fromfile, fromfunction, identity, linspace, logspace, mgrid, ogrid, ones_like, zeros_like\n",
-    "# ndarray.astype, atleast_1d, atleast_2d, atleast_3d, mat\n",
+    "# fromfile, ones_like, zeros_like\n",
     "# array_split, diagonal, dsplit, dstack, ndarray.item, \n",
-    "# repeat, squeeze, swapaxes, take, \n",
-    "# nonzero, where, ptp,\n",
-    "# choose, compress, cumprod, cumsum, inner, ndarray.fill, imag, prod, put, putmask, real,\n",
+    "# ndarray.fill, imag, prod, put, putmask, real,\n",
     "# np.ix_()\n",
     "# numpy ufunc\n",
-    "# Indexing, Indexing (reference), newaxis, ndenumerate, indices"
+    "# Indexing, Indexing (reference), ndenumerate, indices"
    ]
   },
   {
@@ -1917,7 +2070,92 @@
    "id": "fleet-athens",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# mat, matrix, asmatrix - Interpreat as a matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hairy-palestinian",
+   "metadata": {},
+   "source": [
+    "### take"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "nearby-michigan",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 3, 6])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [4, 3, 5, 7, 6, 8]\n",
+    "indices = [0, 1, 4]\n",
+    "np.take(a, indices) # This is equivalent to a[indices]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "victorian-mambo",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 3, 6])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array(a)\n",
+    "a[indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "classical-camera",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 3],\n",
+       "       [5, 7]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.take(a, [[0, 1], [2, 3]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "certain-jewel",
+   "metadata": {},
+   "source": [
+    "### sum"
+   ]
   },
   {
    "cell_type": "code",
